# Astrbot-desktop-assistant

./: README.md  __init__.py  __main__.py  api_client.py  app.py  bridge.py  config.py  floating_ball.py  install.bat  install.sh  main.py  pyproject.toml  quick_install.bat  quick_install.sh  update.bat  update.bat.bak  update.sh
desktop_client/: README.md  __init__.py  __main__.py  api_client.py  app.py  bridge.py  config.py  dependency_checker.py  logger.py  main.py  requirements.txt
desktop_client/controllers/: __init__.py  settings_controller.py
desktop_client/gui/: __init__.py  chat_widgets.py  floating_ball.py  hotkeys.py  icons.py  markdown_utils.py  screenshot_selector.py  settings_window.py  simple_chat_window.py  system_tray.py  themes.py
desktop_client/gui/theme_qss/: __init__.py  loader.py  variables.py
desktop_client/handlers/: __init__.py  media_handler.py  message_handler.py  proactive_handler.py  remote_command_handler.py  screenshot_handler.py
desktop_client/plugins/: __init__.py  base.py  example_plugin.py  hooks.py  manager.py
desktop_client/services/: __init__.py  chat_history.py  desktop_monitor.py  proactive_dialog.py  screen_capture.py  update_service.py
desktop_client/utils/: __init__.py  autostart.py
docs/: LOGGING.md
gui/: chat_widgets.py  floating_ball.py  markdown_utils.py  settings_window.py  themes.py
tests/: __init__.py  conftest.py  test_bridge.py  test_config.py  test_logger.py  test_platforms.py
